--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="writings">
                 <p class="intro">A Brief Introduction to One Piece</p>
                 <p class="para">The story follows the adventures of Monkey D. Luffy, a boy whose body gained the properties of rubber after unintentionally eating a Devil Fruit. With his pirate crew, the Straw Hat Pirates, Luffy explores the Grand Line in search of the deceased King of the Pirates Gol D. Roger's ultimate treasure known as the "One Piece" in order to become the next King of the Pirates.</p>
-                <button class="signbutton" type="button">Ready for journey</button>
+                <button class="signbutton" type="button">Get Ready for journey</button>
             </div>
             <img class="crew" src="crew.jpg" alt="crew">
         </div>
