slight changes in flex

--- a/index.html
+++ b/index.html
@@ -17,24 +17,39 @@
                 <p>Contact</p>
             </div>
             <div class="writings">
+                <div>
                 <p class="intro">A Brief Introduction to One Piece</p>
                 <p class="para">The story follows the adventures of Monkey D. Luffy, a boy whose body gained the properties of rubber after unintentionally eating a Devil Fruit. With his pirate crew, the Straw Hat Pirates, Luffy explores the Grand Line in search of the deceased King of the Pirates Gol D. Roger's ultimate treasure known as the "One Piece" in order to become the next King of the Pirates.</p>
                 <button class="signbutton" type="button">Get Ready for journey</button>
+                </div>
+                <img class="crew" src="crew.jpg" alt="crew">
             </div>
-            <img class="crew" src="crew.jpg" alt="crew">
+            
         </div>
         <div class="second">
             <p class="ran">One piece the greatest manga of all time</p>
             <div class="pictures">
-                <img class= "luffy" src="mugicrew.jpg" alt="Gum Gum crew">
-                <img class= "law" src="lawcrew.png" alt="Room crew">
-                <img class= "beard" src="whitebeardcrew.jpg" alt="Family crew">
-                <img class= "mih" src="mihawk.jpg" alt="One man Army!">
+                <div>
+                    <img class= "luffy" src="mugicrew.jpg" alt="Gum Gum crew">
+                    <p class="lu">Luffy is the  captain of mugiwara pirate</p>
+                </div>
+                <div>
+                    <img class= "law" src="lawcrew.png" alt="Room crew">
+                    <p class="la">Law has the power of heart-heart Fruit</p>
+                </div>
+                <div>
+                    <img class= "beard" src="whitebeardcrew.jpg" alt="Family crew">
+                    <p class="bea">Being in white beard pirate group is <br>like being in a family</p>
+                </div>
+                <div>
+                    <img class= "mih" src="mihawk.jpg" alt="One man Army!">
+                    <p class="mi">Mihawk is the one man Army</p>
+                </div>
              </div>
-            <p class="lu">Luffy is the  captain of mugiwara pirate</p>
+            <!-- <p class="lu">Luffy is the  captain of mugiwara pirate</p>
             <p class="la">Law has the power of heart-heart Fruit</p>
             <p class="bea">Being in white beard pirate group is like being in a family</p>
-            <p class="mi">Mihawk is the one man Army</p>
+            <p class="mi">Mihawk is the one man Army</p> -->
         </div>
         <div class="third">
             <p class="quote">“You need to accept the fact that you're not the best and have all the will to strive to be better than anyone you face.”</p>
